src/objects/Paysched__c.object
<CustomObject>
    <fields>
        <fullName>Bank_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>Originator_Bank_Account__c</referenceTo>
        <relationshipLabel>Payment Schedules</relationshipLabel>
        <relationshipName>Payment_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Day_Display__c</fullName>
        <label>Day</label>
        <picklist>
            <controllingField>Frequency_Display__c</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FTA_Sub_Type__c</fullName>
        <label>FTA Sub Type</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Frequency_Display__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fund_Transfer_Agent__c</fullName>
        <label>Fund Transfer Agent</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOJO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BoC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BoI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interval__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Interval</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max__c</fullName>
        <label>Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_First_Interval__c</fullName>
        <defaultValue>10</defaultValue>
        <label>First Collection Interval</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_Display__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One off</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Payment Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Bank_Account__c</columns>
        <columns>Day_Display__c</columns>
        <columns>New_First_Interval__c</columns>
        <columns>Frequency_Display__c</columns>
        <columns>FTA_Sub_Type__c</columns>
        <columns>Fund_Transfer_Agent__c</columns>
        <columns>Interval__c</columns>
        <columns>Max__c</columns>
        <columns>Type_Display__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payment Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_Max_If_Fixed</fullName>
        <active>true</active>
        <description>checks that the Max field is greater than 0 if the Type is Fixed</description>
        <errorConditionFormula>AND(ISPICKVAL(Type_Display__c , &quot;Fixed&quot;), 
ISNULL(Max__c))</errorConditionFormula>
        <errorDisplayField>Max__c</errorDisplayField>
        <errorMessage>A Payment Schedule with a type of Fixed must have a value in the Max field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Max_If_Ongoing</fullName>
        <active>true</active>
        <description>checks that the Max field is blank if the type is On Going</description>
        <errorConditionFormula>AND(
ISPICKVAL( Type_Display__c , &quot;On Going&quot;), 
Max__c &gt;0)</errorConditionFormula>
        <errorDisplayField>Max__c</errorDisplayField>
        <errorMessage>A Payment Schedule with a type of On Going must have a blank Max field</errorMessage>
    </validationRules>
</CustomObject>